fixed header so small text is visible

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@ html, body {
 }
 
 .header {
-  /* display: flex;
-  justify-content: center; */
+  display: flex;
+  justify-content: center;
   height: 100px;
   top: 0;
   background-color: #4169E1; /* Royal Blue */
@@ -19,6 +19,17 @@ html, body {
   text-align: center;
   padding: 10px 0;
   width: 100%;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.header h1 {
+  height: 30px;
+}
+
+.header p {
+  color: white;
 }
 
 .container {
@@ -32,6 +43,11 @@ html, body {
   background-color: yellow;
 }
 
+.top {
+  display: flex;
+  justify-content: center;
+}
+
 .card, .card-back {
   background-color: #4169E1;
   box-shadow:0 4px 8px rgba(0,0,0,0.5);
@@ -42,8 +58,12 @@ html, body {
   height: 150px;
   width: 300px;
   transition: transform 0.3s ease;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  display: grid;
+  place-items: center;
+  text-align: center;
+
 }
 
 .card-back{
@@ -54,6 +74,9 @@ html, body {
 .bottom{
   display: flex;
   flex-direction: row;
+  justify-content: center; /* Horizontally centers content */
+  align-items: center; /* Vertically centers content, if needed */
+  gap: 40px;
 }
 
 .nav-button{
@@ -66,31 +89,19 @@ html, body {
   width: 150px;
   font-size: 150%;
   transition: transform 0.3s ease;
-  display: flex;
   align-items: center;
   text-align: center;
+  
+  
 }
 
-/* .card:hover {
+
+.card:hover {
   transform: scale(1.05);
   background-color: #6A9AE2;
   cursor: pointer;
-} */
-
-
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+
+
 
